# SolARFramework

./: .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  JenkinsFile  JenkinsFile_All  LICENSE  README.md  SolARFramework.pri  SolARFramework.pro  SolARFramework.sln  SolARFramework.vcxproj  SolARFramework.vcxproj.filters  bcom-SolARFramework.pc.in  cmake_uninstall.cmake.in  doxyfile  extra-packages-linux.txt  findremakenrules.pri  macros.cmake  packagedependencies-android.txt  packagedependencies-cmake.txt  packagedependencies-linux.txt  packagedependencies-mac.txt  packagedependencies-win.txt  packagedependencies.txt  solarmacros.cmake
SolARWrapper/: .gitignore  PipelineManager.h  PipelineManagerAPI.h  README.md  SolARWrapper.pro  _build.bat  bcom-SolARWrapper.pc.in
SolARWrapper/Swig/: SolAR.i  SolAR_Api_Display.i  SolAR_Api_Example.i  SolAR_Api_Features.i  SolAR_Api_Fusion.i  SolAR_Api_Geom.i  SolAR_Api_Image.i  SolAR_Api_Input_Devices.i  SolAR_Api_Input_Files.i  SolAR_Api_Pipeline.i  SolAR_Api_Reloc.i  SolAR_Api_Sink.i  SolAR_Api_Solver_Map.i  SolAR_Api_Solver_Pose.i  SolAR_Api_Source.i  SolAR_Core.i  SolAR_Datastructure.i  SolAR_Pipeline_Manager.i  XPCF_Api.i  XPCF_Collection.i  XPCF_Component.i  XPCF_Core.i  XPCF_Module.i  XPCF_Properties.i  XPCF_Threading.i  XPCF_Traits.i
SolARWrapper/Swig/include/: Eigen.i  Swig.i
SolARWrapper/include/: PipelineManager.cpp
doc/: SolARFramework.dox
interfaces/: ISolARCamera.h  ISolARCameraCalibration.h  ISolARDescriptor.h  ISolARDescriptorExtractor.h  ISolARDescriptorMatcher.h  ISolARFilter.h  ISolARImageConvertor.h  ISolARImageFilter.h  ISolARImageLoader.h  ISolARImageViewer.h  ISolARKeypointDetector.h  ISolARMarker.h  ISolARMarkerFiducial.h  ISolARMarkerFiducialFinder.h  ISolARMarkerFinder.h  ISolARPoseHomography.h  SharedBuffer.hpp  SharedCircularBuffer.hpp  SharedFifo.hpp  SolARFramework.h  SolARFrameworkDefinitions.h  SolARImage.h  SolARKeypoint.h  SolARMarker.h  SolARMathDefinitions.h  SolARMessages.h  SolARPinholeCamera.h  SolARPose.h  Version.h.in
interfaces/api/3dgs/: I3DGSTrainer.h
interfaces/api/display/: I2DOverlay.h  I3DOverlay.h  I3DPointsViewer.h  IImageViewer.h  IMaskOverlay.h  IMatchesOverlay.h  ISideBySideOverlay.h
interfaces/api/example/: IInterface1.h  IInterface2.h
interfaces/api/features/: I2DTrackablesDetector.h  IContoursExtractor.h  IContoursFilter.h  ICornerRefinement.h  IDescriptorMatcher.h  IDescriptorMatcherGeometric.h  IDescriptorMatcherRegion.h  IDescriptorMatcherStereo.h  IDescriptorsExtractor.h  IDescriptorsExtractorBinary.h  IDescriptorsExtractorFromImage.h  IDescriptorsExtractorSBPattern.h  IFeatureWithDepthFromStereo.h  IImageMatcher.h  IKeylineDetector.h  IKeypointDetector.h  IKeypointDetectorRegion.h  IKeypointsReIndexer.h  IMatchesFilter.h  ISBPatternReIndexer.h
interfaces/api/fusion/: IVisualInertialFusion.h
interfaces/api/geom/: I2DPointsRectification.h  I2DTransform.h  I3DTransform.h  IDepthEstimation.h  IImage2WorldMapper.h  IProject.h  IReprojectionStereo.h  IUndistortPoints.h  IUnproject.h
interfaces/api/gs/: I3DGSLoader.h  I3DGSTrainer.h
interfaces/api/image/: IImageConverter.h  IImageConvertor.h  IImageConvertor.h.autosave  IImageFilter.h  IImageLoader.h  IImageMerger.h  IImageRectification.h  IPerspectiveController.h  IRectification.h
interfaces/api/loop/: ILoopClosingDetector.h  ILoopClosureDetector.h  ILoopCorrector.h  IOverlapDetector.h
interfaces/api/loop_closing/: ILoopClosingDetector.h  ILoopCorrector.h
interfaces/api/map/: I3DGaussianSplatting.h  IMeshing.h  IMultiViewStereo.h  IProcessMap.h  IStructureFromMotion.h
interfaces/api/mapprocessing/: IMeshing.h  IMultiViewStereo.h  IStructureFromMotion.h
interfaces/api/pipeline/: IAsyncRelocalizationPipeline.h  IDenseMappingPipeline.h  IImageSegmentationPipeline.h  IMapProcessingPipeline.h  IMapUpdatePipeline.h  IMappingPipeline.h  IPipeline.h  IPipeline.h.autosave  IPoseEstimationPipeline.h  IRelocalizationPipeline.h  IRelocalizationTrackablePipeline.h  IServiceManagerPipeline.h
interfaces/api/pointCloud/: IPCFilter.h  IPCFilterCentroid.h  IPCProjectOntoImage.h  IPCSemanticFrom2D.h
interfaces/api/reloc/: IKeyframeRetriever.h  IRegression.h  IRelocalizer.h
interfaces/api/segm/: IInstanceSegmentation.h  (+2 more)
interfaces/core/: Log.h  Messages.h  SerializationDefinitions.h  SolARFramework.h  SolARFrameworkDefinitions.h  Timer.h
interfaces/datastructure/: BufferInternal.hpp  CameraDefinitions.h  CameraParametersCollection.h  CloudLine.h  CloudPoint.h  CoordinateSystem.h  CorrespondenceGraph.h  CovisibilityGraph.h  DescriptorBuffer.h  DescriptorMatch.h  DetectedObject.h  FeatureCloudPoint.h  FiducialMarker.h  Frame.h  GeometryDefinitions.h  GlobalDescriptor.h  Identification.h  Image.h  ImageMarker.h  Keyframe.h  KeyframeCollection.h  KeyframeRetrieval.h  Keyline.h  Keypoint.h  Lockable.h  Map.h  Mask2D.h  Mask2DCollection.h  MathDefinitions.h  Mesh.h  Object2D.h  Object2DCollection.h  PointCloud.h  Pose.h  PrimitiveInformation.h  QRCode.h  RelocalizationInformation.h  SparseMap.h  SquaredBinaryPattern.h  StereoCameraDefinitions.h  (+10 more)
src/: SolARFramework.cpp  SolARImage.cpp  SolARKeypoint.cpp  SolARMarker.cpp  SolARPinholeCamera.cpp  SolARPose.cpp
src/core/: Log.cpp  SolARFramework.cpp
src/datastructure/: CameraParametersCollection.cpp  CloudLine.cpp  CloudPoint.cpp  CoordinateSystem.cpp  CorrespondenceGraph.cpp  CovisibilityGraph.cpp  DescriptorBuffer.cpp  DescriptorMatch.cpp  FeatureCloudPoint.cpp  FiducialMarker.cpp  Frame.cpp  GlobalDescriptor.cpp  Identification.cpp  Image.cpp  ImageMarker.cpp  Keyframe.cpp  KeyframeCollection.cpp  KeyframeRetrieval.cpp  Keyline.cpp  Keypoint.cpp  Map.cpp  Mask2D.cpp  Mask2DCollection.cpp  Mesh.cpp  Object2D.cpp  Object2DCollection.cpp  PointCloud.cpp  Pose.cpp  PrimitiveInformation.cpp  QRCode.cpp  RelocalizationInformation.cpp  SparseMap.cpp  SquaredBinaryPattern.cpp  StorageCapabilities.cpp  StorageTrackable.cpp  StorageWorldAnchor.cpp  StorageWorldElement.cpp  StorageWorldLink.cpp  Trackable.cpp  Trackable2D.cpp  (+1 more)
src/sink/: ThirdPartyConnector.cpp
(+123 files in other folders)
